--- a/config/pom.xml
+++ b/config/pom.xml
@@ -7,6 +7,7 @@
 	<packaging>pom</packaging>
 	<modules>
         <module>spring-cloud-config-server</module>
+        <module>spring-cloud-config-client</module>
 	</modules>
 	
 	<properties>
@@ -14,8 +15,14 @@
     </properties>
     
     <dependencyManagement>
-       <dependencies>
-           <dependency>
+        <dependencies>
+			<dependency>
+			    <groupId>org.springframework.boot</groupId>
+			    <artifactId>spring-boot-starter-web</artifactId>
+			    <version>1.5.2.RELEASE</version>
+			</dependency>
+			
+            <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
                 <version>${spring-cloud.version}</version>
