--- a/config/spring-cloud-config-client/pom.xml
+++ b/config/spring-cloud-config-client/pom.xml
@@ -23,6 +23,10 @@
 	        <artifactId>spring-cloud-starter-config</artifactId>
 	    </dependency>
 	    
+	    <!-- 
+	       这个dependency必须要添加
+	       否则@RestController 和 @RequestMapping这样的annotation不起效果
+	    -->
 	    <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
