--- a/config/spring-cloud-config-client/src/main/resources/bootstrap.properties
+++ b/config/spring-cloud-config-client/src/main/resources/bootstrap.properties
@@ -1,4 +1,10 @@
+#use eureka for config service
+
 spring.cloud.config.name=spring-config
 spring.cloud.config.profile=dev
-spring.cloud.config.uri=http://localhost:8085/
+#spring.cloud.config.uri=http://localhost:8085/
 spring.cloud.config.label=master
+spring.cloud.config.discovery.enabled=true
+spring.cloud.config.discovery.serviceId=spring-cloud-config-server
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8081/eureka/
