--- a/config/spring-cloud-config-server/src/main/resources/application.properties
+++ b/config/spring-cloud-config-server/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.cloud.config.server.git.uri=https://github.com/haiswang1989/spring-cloud
 spring.cloud.config.server.git.search-paths=config/config-repo
 spring.cloud.config.server.git.username=790010204@qq.com
 spring.cloud.config.server.git.password=whs790010204
+
+#eureka
+eureka.client.serviceUrl.defaultZone=http://localhost:8081/eureka/
