--- a/config/pom.xml
+++ b/config/pom.xml
@@ -22,6 +22,12 @@
 			    <version>1.5.2.RELEASE</version>
 			</dependency>
 			
+			<dependency>
+			    <groupId>org.springframework.boot</groupId>
+			    <artifactId>spring-boot-starter-actuator</artifactId>
+			    <version>1.5.2.RELEASE</version>
+			</dependency>
+			
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
