--- a/config/spring-cloud-config-client/src/main/resources/application.properties
+++ b/config/spring-cloud-config-client/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 spring.application.name=spring-cloud-config-client
 
 server.port=8086
+
+#close security Certification
+management.security.enabled=false
+
+
+
