--- a/config/spring-cloud-config-server/pom.xml
+++ b/config/spring-cloud-config-server/pom.xml
@@ -22,5 +22,19 @@
 	        <groupId>org.springframework.cloud</groupId>
 	        <artifactId>spring-cloud-config-server</artifactId>
 	    </dependency>
+	    
+	    
+	    <!-- config接入eureka需要的dependency -->
+	    <dependency>
+	        <groupId>org.springframework.cloud</groupId>
+	        <artifactId>spring-cloud-starter-eureka</artifactId>
+	    </dependency>
+	    
+	    <!-- 将config注册到eureka上,需要该dependency -->
+	    <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.8.9</version>
+        </dependency>
 	</dependencies>
 </project>
